--- a/client/css/app/Messanger/view/InformationView.css
+++ b/client/css/app/Messanger/view/InformationView.css
@@ -1,23 +1,47 @@
-.hide-message {
-    display: none;
-}
-
-.messanger-wrap {
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.close {
-    outline: none;
-}
-
-.message-wrap {
+/*.message-wrap {
     position: absolute;
-    width: 450px;
-    top: 10px;
-    left: 5px;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    transition-property: background-color;
+    transition-delay: .4s;
+    background-color: rgba(0, 0, 0, 0.47);
+}*/
+
+.inform {
+    margin: 15px;
+    width: 250px;
 }
+
+    .inform .modal-content {
+        background: rgb(223, 240, 216);
+    }
+
+.warning {
+    margin: 15px;
+    width: 250px;
+}
+    
+    .warning .modal-content {
+        background: #FCF8E3;
+    }
+
+.error {
+    margin-top: 250px;
+}
+
+    .error .modal-content {
+        background: #F2DEDE;
+    }
+
+.confirm {
+    margin-top: 250px;
+}
+
+    .confirm .modal-content{
+        background: #D9EDF7;
+    }
 
 .tooltip-wrapper {
     position: absolute;
