--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -12,16 +12,16 @@
 }
 
 .content-selected-item {
-  border: 4px solid #6c7000;
+  border: 4px solid #3d763c;
   border-radius: 10px;
   margin: 5px;
   padding: 5px;
   cursor: pointer;
-  background-color: #6c3400; 
+  background-color: #d8f0df; 
 }
 
 .content-selected-item:hover {
-  box-shadow: 0 0 30px #6c7a89;
+  box-shadow: 0 0 30px #3d763c;
 }
 
 .content-selected-item h4 {
