MVC structure; finish location add

--- a/client/admin/css/main.css
+++ b/client/admin/css/main.css
@@ -2,14 +2,14 @@
     padding: 25px;
 }
 
-th.actions {
-    width: 195px;
-}
-
-.tab-content {
+table > button {
     margin-top: 15px;
 }
 
-#add-new {
+th.actions {
+    width: 85px;
+}
+
+.tab-content {
     margin-top: 15px;
 }
