--- a/client/css/app/Menu/menu.css
+++ b/client/css/app/Menu/menu.css
@@ -25,12 +25,12 @@
 }
 
 #logo {
-	position: absolute;
-	width: 65px;
-	height: 59px;
-	background-image: url("/img/caesar.png");	
-	background-size: 100% 100%;
-	border-right: 1px solid #aaa;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("/img/caesar.png");
+    background-size: 100% 100%;
+    border-right: 1px solid #aaa;
 }
 
 #navbar {
