--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -12,16 +12,18 @@
 }
 
 .content-selected-item {
-  border: 4px solid #3d763c;
-  border-radius: 10px;
+  border: 1px solid #3d763c;
   margin: 5px;
   padding: 5px;
   cursor: pointer;
-  background-color: #d8f0df; 
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
+  transition: .3s;
 }
 
 .content-selected-item:hover {
-  box-shadow: 0 0 30px #3d763c;
+  background: rgba(235, 235, 235, 0.4);
 }
 
 .content-selected-item h4 {
@@ -32,7 +34,7 @@
 .content-selected-item p {
   margin: 0;
   font-size: 12px;
-}selected-
+}
 
 .content-selected-item p span {
   font-weight: bold;
