--- a/client/css/app/Groups/view/GroupView.css
+++ b/client/css/app/Groups/view/GroupView.css
@@ -1,3 +1,13 @@
 .fullInfo {
     cursor: pointer;
 }
+
+.edit-group {
+    float: right;
+    font-size: 10px;
+    margin: 4px;
+}
+
+#groupEdit input, #groupEdit select {
+    margin-bottom: 10px;
+}
