Location view style fix

--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.locations-list {
+  min-height: 250px;
+}
+
+.location-nav {
+  visibility: hidden;
+}
+
 .location-item * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
