--- a/client/css/app/main.css
+++ b/client/css/app/main.css
@@ -49,7 +49,7 @@ html, body {
 .main-nav span {
   position: absolute;
   top: 50%;
-  left: 40px;
+  left: 20px;
   z-index: 100;
   margin-top: -15px;
 }
@@ -126,4 +126,8 @@ html, body {
 
 .close {
   outline: none;
+}
+
+.searcher {
+  margin-bottom: 10px;
 }
