Fix pagination style&bugs

--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -3,11 +3,15 @@
 }
 
 .locations-list {
-  min-height: 250px;
+  min-height: 225px;
 }
 
 .location-nav {
-  visibility: hidden;
+  cursor: default;
+}
+
+.location-nav:hover {
+  background-color: #FFFFFF;
 }
 
 .location-item * {
