Move all modals to their own views

--- a/client/admin/css/main.css
+++ b/client/admin/css/main.css
@@ -17,3 +17,7 @@ th.actions {
 .tab-content {
     margin-top: 15px;
 }
+
+.teachers-block .input-group input, .experts-block .input-group input{
+    margin-bottom: 5px;
+}
