--- a/client/css/app/Groups/view/GroupView.css
+++ b/client/css/app/Groups/view/GroupView.css
@@ -2,7 +2,7 @@
     cursor: pointer;
 }
 
-.edit-group-ico {
+.edit-group-ico, .delete-group-ico {
     float: right;
     font-size: 10px;
     margin: 4px;
