--- a/client/css/app/main.css
+++ b/client/css/app/main.css
@@ -49,9 +49,10 @@ html, body {
 .main-nav span {
   position: absolute;
   top: 50%;
-  left: 20px;
+  left: 50%;
   z-index: 100;
   margin-top: -15px;
+  margin-left: -15px;
 }
 
 .top-nav {
