Create Unified Add/Edit view and templates

--- a/client/css/app/Groups/view/GroupView.css
+++ b/client/css/app/Groups/view/GroupView.css
@@ -8,6 +8,6 @@
     margin: 4px;
 }
 
-#groupEdit input, #groupEdit select {
+.modal .input-group input, .modal .input-group select {
     margin-bottom: 10px;
 }
