--- a/client/css/app/Groups/view/GroupCollectionView.css
+++ b/client/css/app/Groups/view/GroupCollectionView.css
@@ -25,3 +25,32 @@
 #main {
   min-height: 225px;
 }
+
+#my-groups-field {
+    margin-left: 20px;
+    width: 200px;
+    position: absolute;
+    z-index: 100;
+}
+
+.form-group input[type="checkbox"] {
+    display: none;
+}
+
+.form-group input[type="checkbox"] + .btn-group > label span {
+    width: 20px;
+}
+
+.form-group input[type="checkbox"] + .btn-group > label span:first-child {
+    display: none;
+}
+.form-group input[type="checkbox"] + .btn-group > label span:last-child {
+    display: inline-block;   
+}
+
+.form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
+    display: inline-block;
+}
+.form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
+    display: none;   
+}
