Update all modals styles in admin app

--- a/client/admin/css/main.css
+++ b/client/admin/css/main.css
@@ -18,14 +18,18 @@ th.actions {
     margin-top: 15px;
 }
 
-.teachers-block .input-group input, .experts-block .input-group input{
+.teachers-block input, .experts-block input{
     margin-bottom: 5px;
 }
 
-.btn.change-password {
-    margin: 10px 0 5px 0;
+.teachers-block a, .experts-block a {
+    display: block;
 }
 
-.input-group.new-password {
+.btn.change-password {
+    margin-bottom: 15px;
+}
+
+.form-group.new-password {
     display: none;
 }
