Update modals in main app

--- a/client/css/app/Groups/view/GroupCollectionView.css
+++ b/client/css/app/Groups/view/GroupCollectionView.css
@@ -7,9 +7,7 @@
 }
 
 #startDate, #finishDate {
-    width: 100px;
-    display: block;
-    float: none;
+    text-align: center;
 }
 
 .add-teacher, .add-expert {
