--- a/client/css/app/main.css
+++ b/client/css/app/main.css
@@ -62,7 +62,7 @@ html, body {
 
 .notifications {
   border: 1px solid #EBEBEB;
-  background: #FFFFFF;
+  background: #ADADAD;
   padding: 5px;
   height: 100%;
 }
