Locations&Filter update

--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -7,11 +7,8 @@
 }
 
 .location-nav {
+  background-color: #EFEFEF;
   cursor: default;
-}
-
-.location-nav:hover {
-  background-color: #FFFFFF;
 }
 
 .location-item * {
