--- a/client/css/app/Menu/menu.css
+++ b/client/css/app/Menu/menu.css
@@ -25,7 +25,7 @@
 }
 
 #logo {
-    position: absolute;
+    margin: auto;
     width: 100px;
     height: 100px;
     background-image: url("/img/caesar.png");
