--- a/client/css/app/Session/view/CurrentSession.css
+++ b/client/css/app/Session/view/CurrentSession.css
@@ -1,7 +1,11 @@
-.user-info {
-    padding: 5px;
-    font-size: 11pt;
-    background: #FFFFFF;
-    border: 1px solid #EBEBEB;
-    height: 100px;
+.user-info-wrap {
+    padding: 8px;
+    border: 1px solid #E3E3E3;
+    margin-bottom: 12px;
 }
+
+    .user-info {
+        font-size: 11pt;
+        background: #FFFFFF;
+        height: 140px;
+    }
