--- a/client/css/app/main.css
+++ b/client/css/app/main.css
@@ -23,59 +23,70 @@ html, body {
 }
 
 .main-menu, .user-account {
-  height: 100px;
+  height: 140px;
+  text-align: center;
 }
 
 .top-nav, .main-nav {
-    opacity: 0.4;
-    cursor: pointer;
-    font-size: 30px;
-    text-align: center;
-    border: 1px solid #CCCCCC;
-    transition: .3s;
+  opacity: 0.6;
+  cursor: pointer;
+  font-size: 30px;
+  text-align: center;
 }
 
-.top-nav:hover, .main-nav:hover {
-  background-color: #EFEFEF;
+.top-nav span:hover, .main-nav span:hover {
+  color: black;
 }
 
 .main-nav {
   position: relative;
-  height: calc(100% - 106px);
+  height: calc(100% - 142px);
   margin: 6px 0px;
 
 }
 
 .main-nav span {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 45%;
+  left: 45%;
   z-index: 100;
   margin-top: -15px;
   margin-left: -15px;
+  font-size: 55px;
+  transition: .5s;
 }
 
 .top-nav {
-  height: 100px;
-  padding: 30px 0;
+  height: 50px;
+  font-size: 55px;
+}
+
+.top-nav span {
+  transition: .5s;
 }
 
 .notifications {
-  border: 1px solid #EBEBEB;
-  background: #ADADAD;
-  padding: 5px;
+  border: 1px solid rgba(128, 128, 128, 0.22);
+  background: rgba(0, 0, 0, 0.08);
+  padding: 30px;
   height: 100%;
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
 }
 
 .center-content {
   height: 100%;
+  border: 1px solid rgba(128, 128, 128, 0.22);
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
 }
 
 .content {
-  height: calc(100% - 212px);
+  height: calc(100% - 122px);
   overflow: hidden;
   background: white;
-  border: 1px solid #EBEBEB;;
   margin: 6px 0px;
 }
 
