--- a/client/open/css/main.css
+++ b/client/open/css/main.css
@@ -1,10 +1,11 @@
 .wrapper {
-    padding: 10px 35px;
+    margin: 10px;
 }
 
 #container {
-  padding: 25px;
+  padding: 20px;
   height: 100%;
+  min-height: 400px;
   border: 1px solid rgba(128, 128, 128, 0.22);
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
