--- a/client/css/app/Groups/view/GroupCollectionView.css
+++ b/client/css/app/Groups/view/GroupCollectionView.css
@@ -7,6 +7,9 @@
 }
 
 #startDate, #finishDate {
+    display: inline-block;
+    width: 120px;
+    margin-right: 10px;
     text-align: center;
 }
 
