--- a/client/css/app/Locations/view/LocationView.css
+++ b/client/css/app/Locations/view/LocationView.css
@@ -25,7 +25,7 @@
 }
 
 .content-selected-item {
-  border: 1px solid #3d763c;
+  border: 1px solid #286090;
   margin: 5px;
   padding: 5px;
   cursor: pointer;
