fixed group selecting and shedule scroll for chrome

--- a/client/css/app/Schedule/view/GridView.css
+++ b/client/css/app/Schedule/view/GridView.css
@@ -1,6 +1,13 @@
 .schedule-full-height {
     height: calc(100% - 122px);
+    display: table;
 }
+
+@-moz-document url-prefix() { 
+    .schedule-full-height {
+        display: inherit;
+    }
+} 
 
 .schedule-header {
     margin-top: 20px;
