--- a/client/css/app/Groups/view/GroupView.css
+++ b/client/css/app/Groups/view/GroupView.css
@@ -33,34 +33,6 @@
     font-size: 14px;
 }
 
-.selected-content-item {
+.content-item.selected-group {
   border: 1px solid #286090;
-  margin: 5px;
-  padding: 5px;
-  cursor: pointer;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
-  transition: .3s;
-}
-
-.selected-content-item:hover {
-  background: rgba(235, 235, 235, 0.4);
-}
-
-.selected-content-item h4 {
-  font-weight: bold;
-  margin: 0;
-}
-
-.selected-content-item p {
-  margin: 0;
-}
-
-.selected-content-item p span {
-  font-weight: bold;
-}
-
-.selected-content-item span.glyphicon {
-    font-size: 12px;
 }
