--- a/client/css/app/Schedule/view/EditView.css
+++ b/client/css/app/Schedule/view/EditView.css
@@ -1,7 +1,3 @@
-.edit-panel {
-    margin-top: 115px;
-}
-
 .edit-panel .edit-panel-labels {
     margin-right: 5px;
 }
@@ -11,3 +7,6 @@
     width: 60%;
 }
 
+.offices, .rooms, .event-type {
+	margin-bottom: 20px;
+}
